# algotrading-projects-lean-cli

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
algotrading_projecs_lean_cli/basic-course/02_LimitOrders/: main.py
algotrading_projecs_lean_cli/basic-course/03_MarketOrders/: main.py
algotrading_projecs_lean_cli/basic-course/06_SellAtPrice/: main.py
algotrading_projecs_lean_cli/basic-course/07_StopMarketOrder/: main.py
algotrading_projecs_lean_cli/basic-course/08_OrderEvent/: main.py
algotrading_projecs_lean_cli/basic-course/09_ScheduleEvent/: main.py
algotrading_projecs_lean_cli/basic-course/10_TrailingStop/: main.py
algotrading_projecs_lean_cli/basic-course/LimitOrders/: main.py
algotrading_projecs_lean_cli/jose-course/BuyAndHold/: main.py
algotrading_projecs_lean_cli/jose-course/SellAfterTime/: main.py
algotrading_projecs_lean_cli/jose-course/SellAtPrice/: main.py
algotrading_projecs_lean_cli/jose-course/SellOnProfit/: main.py
